UI (ladder): fix class graphs too big on Stats page

--- a/core/src/css/component/decktracker/main/decktracker-ladder-stats-overview.component.scss
+++ b/core/src/css/component/decktracker/main/decktracker-ladder-stats-overview.component.scss
@@ -8,27 +8,37 @@
 	max-width: 100%;
 }
 
-.graphs {
-	display: flex;
-	justify-content: space-evenly;
-	margin-top: 20px;
-}
-
-.graph {
-	width: 50%;
-	max-width: 350px;
+.container {
 	display: flex;
 	flex-direction: column;
-	font-family: Open Sans;
+	flex-grow: 1;
+	max-width: 100%;
+	overflow: auto;
 
-	.title {
-		color: var(--default-title-color);
-		font-size: 20px;
-		text-align: center;
-		margin-bottom: 20px;
+	.graphs {
+		display: flex;
+		justify-content: space-evenly;
+		margin-top: 20px;
 	}
 
-	.chart {
-		width: 100%;
+	.graph {
+		width: 50%;
+		max-width: 350px;
+		display: flex;
+		flex-direction: column;
+		font-family: Open Sans;
+		align-items: center;
+
+		.title {
+			color: var(--default-title-color);
+			font-size: 20px;
+			text-align: center;
+			margin-bottom: 20px;
+		}
+
+		.chart {
+			width: 100%;
+			max-width: 250px;
+		}
 	}
 }
